[gd_scene load_steps=11 format=3 uid="uid://7qmy5h0nopr4"]

[ext_resource type="Script" path="res://game/workspaces/inv_slot.gd" id="1_wmhf0"]
[ext_resource type="Texture2D" uid="uid://b42ckhnj7ml7o" path="res://cards/tools/axe.png" id="2_o7iye"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ku44h"]

[sub_resource type="Animation" id="Animation_48a8p"]
resource_name = "unavaliable"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(0.666, 0.333, 0.333, 0.666),
"update": 0,
"values": [0.0, 0.10472, -0.10472, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0.470588, 0.415686, 1), Color(0.996078, 0.470588, 0.415686, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0qil4"]
resource_name = "avaliable"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.666, 0.333),
"update": 0,
"values": [Vector2(28, 40), Vector2(28, 30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bl2bx"]
_data = {
"avaliable": SubResource("Animation_0qil4"),
"unavaliable": SubResource("Animation_48a8p")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_py6p6"]
size = Vector2(56, 80)

[sub_resource type="Animation" id="Animation_qur2r"]
resource_name = "on_mouse_entered"
length = 0.1

[sub_resource type="Animation" id="Animation_lyhxj"]
resource_name = "on_mouse_entered_if_not_tool"
length = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1m8t"]
_data = {
"on_mouse_entered": SubResource("Animation_qur2r"),
"on_mouse_entered_if_not_tool": SubResource("Animation_lyhxj")
}

[node name="Button" type="Button"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 56.0
offset_bottom = 88.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16
text = "ymnwrx
ymnwrx
ymnwrx
ymnwrx
ymnwrx
ymnwrx
ymnwrx"
script = ExtResource("1_wmhf0")

[node name="Slot" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Slot"]
material = SubResource("ShaderMaterial_ku44h")
position = Vector2(28, 40)
texture = ExtResource("2_o7iye")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_bl2bx")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot"]
position = Vector2(28, 40)
shape = SubResource("RectangleShape2D_py6p6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot"]
libraries = {
"": SubResource("AnimationLibrary_m1m8t")
}

[node name="Qty" type="Label" parent="Slot"]
offset_top = -12.0
offset_right = 56.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
